# cpp_gen

./: CMakeLists.txt  README.md  compile_commands.json  run.sh
src/: main.cc
